unpackaged/main/default/objects/Change_Control_Effectiveness_Check__c/Change_Control_Effectiveness_Check__c.object-meta.xml
<CustomObject>
    <label>Change Control Effectiveness Check</label>
    <nameField>
        <displayFormat>CC-EC-{0000}</displayFormat>
        <label>Change Control Effectiveness Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Control Effectiveness Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>