unpackaged/main/default/objects/Change_Control_Effectiveness_Check__c/fields/Change_Control__c.field-meta.xml
<CustomField>
        <fullName>Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipName>Change_Control_Effectiveness_Check</relationshipName>
        <type>Lookup</type>
    </CustomField>