unpackaged/main/default/objects/Change_Control_Effectiveness_Check__c/fields/CMPL123_WF_Action_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control_Effectiveness_CheckcCMPL</relationshipName>
        <type>Lookup</type>
    </CustomField>