unpackaged/main/default/objects/Change_Control_Effectiveness_Check__c/fields/CMPL123Rule_Key_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>