unpackaged/main/default/objects/Change_Control_Effectiveness_Check__c/validationRules/Prevent_create_and_edit.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_create_and_edit</fullName>
        <active>false</active>
        <errorConditionFormula>Change_Control__r.CMPL123_WF_Status__c = "Closed - Change Control"</errorConditionFormula>
        <errorMessage>Cannot add/edit after change control has been closed</errorMessage>
    </ValidationRule>